terminei a tela pais e arrumei o menu

--- a/Viaxar/app/src/main/res/layout/activity_cadastro.xml
+++ b/Viaxar/app/src/main/res/layout/activity_cadastro.xml
@@ -26,7 +26,7 @@
         android:layout_height="55dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Create account,"
-        android:textColor="#686868"
+        android:textColor="@color/cinzaToolbar"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
         android:layout_height="41dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Sign up to get started!"
-        android:textColor="#686868"
+        android:textColor="@color/cinzaToolbar"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,6 +56,7 @@
         android:layout_width="152dp"
         android:layout_height="23dp"
         android:text="I'm already a member."
+        android:textColor="@color/cinzaToolbar"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
