--- a/Viaxar/app/src/main/res/menu/bottom_menu.xml
+++ b/Viaxar/app/src/main/res/menu/bottom_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/ic_menu_home"
+        android:icon="@drawable/ic_menub_home"
         android:title="Home"
         app:showAsAction="always"/>
 
