--- a/Viaxar/app/src/main/res/layout/activity_main.xml
+++ b/Viaxar/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="177dp"
+        android:layout_width="184dp"
         android:layout_height="64dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Get started"
-        android:textColor="#686868"
+        android:textColor="@color/cinzaToolbar"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="37dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Start with signing up or sign in!"
-        android:textColor="#686868"
+        android:textColor="@color/cinzaToolbar"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,11 +64,10 @@
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="100dp"
         android:background="@drawable/button_bg"
-        android:backgroundTint="#1EAAF1"
+        android:backgroundTint="@color/cinzaToolbar"
         android:enabled="true"
         android:text="SIGN IN"
-        android:textColor="#1EAAF1"
-        android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
