--- a/Viaxar/app/src/main/res/layout/activity_menu.xml
+++ b/Viaxar/app/src/main/res/layout/activity_menu.xml
@@ -13,6 +13,7 @@
         android:focusable="true"
         app:layout_anchor="@id/bar"
         android:src="@drawable/ic_menu_world"
+        android:backgroundTint="@color/azul"
         />
 
     <com.google.android.material.bottomappbar.BottomAppBar
@@ -20,23 +21,21 @@
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/colorPrimaryDark"
-        app:fabAlignmentMode="center"
-        app:contentInsetStart="0dp">
+        android:backgroundTint="@color/cinzaexplorar"
+        app:contentInsetStart="0dp"
+        app:fabAlignmentMode="center">
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_bottom"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_menu"
+            android:background="@color/cinzaToolbar"
             android:backgroundTint="@color/transparente"
-            />
+            app:labelVisibilityMode="labeled"
+            app:menu="@menu/bottom_menu" />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
-
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
