--- a/Viaxar/app/src/main/res/layout/fragment_informations.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_informations.xml
@@ -106,13 +106,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="match_parent"
                 android:gravity="end">
 
                 <Button
                     android:id="@+id/btnAlterarSenha"
                     android:layout_width="120dp"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="56dp"
                     android:background="@drawable/button_bg"
                     android:backgroundTint="#1EAAF1"
@@ -120,7 +120,7 @@
                     android:enabled="true"
                     android:fadeScrollbars="false"
                     android:text="Trocar Senha"
-                    android:textColor="@color/azul" />
+                    android:textColor="@color/cinzaexplorar" />
 
             </LinearLayout>
 
@@ -160,11 +160,11 @@
                     android:layout_height="45dp"
                     android:layout_gravity="end"
                     android:background="@drawable/button_lg"
-                    android:backgroundTint="#1EAAF1"
+                    android:backgroundTint="@color/cinzaToolbar"
                     android:enabled="false"
                     android:text="Salvar"
                     android:textColor="@color/white"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
             </LinearLayout>
 
             <Button
