--- a/Viaxar/app/src/main/res/layout/pais_fav_item.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav_item.xml
@@ -48,7 +48,7 @@
             android:visibility="visible" />
 
         <TextView
-            android:id="@+id/tvContinente"
+            android:id="@+id/tvDescricao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
