--- a/Viaxar/app/src/main/res/layout/fragment_favorites.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_favorites.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.favorites.FavoritesFragment"
-    android:background="#212121">
+    tools:context=".FavoritesFragment"
+    android:background="#212121"
+    android:paddingBottom="60dp">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/coordinatorLayout"
