--- a/Viaxar/app/src/main/res/layout/activity_pais.xml
+++ b/Viaxar/app/src/main/res/layout/activity_pais.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#212121"
     android:orientation="vertical"
-    tools:context=".PaisActivity">
+    tools:context=".PaisActivity"
+    >
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
