--- a/Viaxar/app/src/main/res/layout/activity_profile.xml
+++ b/Viaxar/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:scrollbarAlwaysDrawHorizontalTrack="false"
     android:scrollbarAlwaysDrawVerticalTrack="false"
-    tools:context=".ui.informations.InformationsFragment">
+    tools:context=".InformationsFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
