--- a/Viaxar/app/src/main/res/layout/fragment_home.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
+    android:background="@color/cinzaFundo"
     android:scrollbarSize="0dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".HomeFragment"
+    android:paddingBottom="60dp">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
