pega ae venizius

--- a/Viaxar/app/src/main/res/layout/activity_cadastro.xml
+++ b/Viaxar/app/src/main/res/layout/activity_cadastro.xml
@@ -13,11 +13,13 @@
         android:id="@+id/imageView4"
         android:layout_width="329dp"
         android:layout_height="180dp"
-        app:layout_constraintBottom_toTopOf="@+id/edtEmailCad"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.631"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/aviao2" />
 
     <TextView
@@ -70,26 +72,26 @@
         android:id="@+id/tvLogin"
         android:layout_width="50dp"
         android:layout_height="23dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="88dp"
         android:text="Sign in"
         android:textColor="#1EAAF1"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <EditText
         android:id="@+id/edtEmailCad"
-        android:layout_width="303dp"
-        android:layout_height="55dp"
+        android:layout_width="302dp"
+        android:layout_height="50dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toTopOf="@+id/edtSenhaCad"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.971" />
@@ -97,17 +99,17 @@
     <EditText
         android:id="@+id/edtSenhaCad"
         android:layout_width="302dp"
-        android:layout_height="54dp"
+        android:layout_height="50dp"
         android:hint="Password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.563" />
+        app:layout_constraintVertical_bias="0.576" />
 
     <RadioButton
         android:id="@+id/chkTermos"
@@ -131,7 +133,7 @@
         android:layout_marginBottom="56dp"
         android:background="@drawable/button_lg"
         android:backgroundTint="#1EAAF1"
-        android:enabled="false"
+        android:enabled="true"
         android:text="SIGN UP"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
