--- a/Viaxar/app/src/main/res/layout/activity_pais.xml
+++ b/Viaxar/app/src/main/res/layout/activity_pais.xml
@@ -38,7 +38,7 @@
                 android:foregroundGravity="center">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/imgPais"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="0"
