--- a/Viaxar/app/src/main/res/layout/activity_paises.xml
+++ b/Viaxar/app/src/main/res/layout/activity_paises.xml
@@ -37,7 +37,7 @@
                 android:textSize="35dp" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imgPais"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_voltar" />
