--- a/Viaxar/app/src/main/res/layout/card_informacoes.xml
+++ b/Viaxar/app/src/main/res/layout/card_informacoes.xml
@@ -38,7 +38,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tvDescricao"
+            android:id="@+id/tvContinente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
