--- a/Viaxar/app/src/main/res/layout/cidade_home.xml
+++ b/Viaxar/app/src/main/res/layout/cidade_home.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imgPais"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -34,25 +35,16 @@
             android:paddingLeft="12dp">
 
             <TextView
-                android:id="@+id/tvNome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Cidade"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:visibility="visible" />
-
-            <TextView
                 android:id="@+id/tvPais"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pais"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/tvDescricao"
+                android:id="@+id/tvContinente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -76,7 +68,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imgBandeira"
                 android:layout_width="87dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
