--- a/Viaxar/app/src/main/res/layout/pais_continente_item.xml
+++ b/Viaxar/app/src/main/res/layout/pais_continente_item.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imgPais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
