--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -20,13 +20,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        tools:srcCompat="@tools:sample/avatars"
-        android:paddingHorizontal="5dp"/>
+            <ImageView
+                android:id="@+id/imgPais"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:paddingHorizontal="5dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
         android:id="@+id/linear"
@@ -46,7 +47,7 @@
             android:visibility="visible" />
 
         <TextView
-            android:id="@+id/tvDescricao"
+            android:id="@+id/tvContinente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -71,7 +72,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/imgCoracaoVermelho"
             android:layout_width="wrap_content"
             android:layout_gravity="right"
             android:paddingTop="6dp"
@@ -83,7 +84,7 @@
             />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/imgBandeira"
             android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
