Comecamos a Sessao e revisamos o node

--- a/Viaxar/app/src/main/res/layout/activity_login.xml
+++ b/Viaxar/app/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/edtEmailCad"
+        android:id="@+id/edtEmail"
         android:layout_width="305dp"
         android:layout_height="59dp"
 
