--- a/Viaxar/app/src/main/res/layout/activity_cadastro.xml
+++ b/Viaxar/app/src/main/res/layout/activity_cadastro.xml
@@ -83,7 +83,7 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <EditText
-        android:id="@+id/edtEmailCad"
+        android:id="@+id/edtEmail"
         android:layout_width="302dp"
         android:layout_height="50dp"
         android:hint="Email"
