--- a/Viaxar/app/src/main/res/layout/activity_pais.xml
+++ b/Viaxar/app/src/main/res/layout/activity_pais.xml
@@ -158,8 +158,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/imageView8"
-                        android:layout_margin="5sp"
-                        android:layout_marginTop="0dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="5sp"
                         android:text="Nome-Cidade"
                         android:textColor="#FFFFFF"
                         android:textStyle="bold" />
